--- a/src/main/java/PropertiesFile/ProjectName.properties
+++ b/src/main/java/PropertiesFile/ProjectName.properties
@@ -1,4 +1,4 @@
-url=https://www.harveynorman.com.au/
+url=https://www.harveynorman.com.au
 urlAccountScreen=https://www.harveynorman.com.au/customer/account/login
 urlCreateanAccScreen=https://www.harveynorman.com.au/customer/account/create/
 HomePageTitle=Harvey Norman | Shop Online for Computers, Electrical, Furniture, Bedding, Bathrooms & Flooring | Harvey Norman Australia
